--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "iphone7": "react-native run-ios --simulator='iPhone 7'",
-    "iphone":"react-native run-ios --device 'Thanh's iPhone'",
+    "iphone": "react-native run-ios --device 'Thanh's iPhone'",
     "build:android": "cd android && ./gradlew assembleRelease",
     "open:android": "${ANDROID_HOME}/emulator/emulator -avd Pixel_2_API_29",
     "test": "jest",
@@ -38,6 +38,7 @@
     "react-native-country-picker-modal": "^1.9.8",
     "react-native-firebase": "5.5.6",
     "react-native-gesture-handler": "~1.5.5",
+    "react-native-gifted-chat": "^0.13.0",
     "react-native-i18n": "^2.0.15",
     "react-native-image-header-scroll-view": "^0.10.3",
     "react-native-image-picker": "^2.3.1",
